hphp/hack/test/typecheck/override_abstract_concrete.php.exp
File "override_abstract_concrete.php", line 8, characters 28-28:
Member f has the wrong type (Typing[4341])
File "override_abstract_concrete.php", line 8, characters 28-28:
Cannot re-declare this method as abstract
File "override_abstract_concrete.php", line 4, characters 19-19:
Previously defined here
